Fix user dropdown vs. TableOfContents z-index

--- a/client/layout.css
+++ b/client/layout.css
@@ -30,3 +30,6 @@ li.dropdown.halflink > a.link:first-child { padding-right: 0px; }
  * display: block.
  */
 .modal { display: none; }
+
+/* Place navbar above sticky TableOfContents, so dropdowns don't get covered */
+nav.navbar { z-index: 1025; }
